--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="index.style">
+  <script src="index.js " defer></script>
 </head>
 <body>
-  
+  <form id="addEvent">
+
+
+
+    <button>Add Event</button>
+  </form>
+  <ul id="events"></ul>
 </body>
 </html>
